--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
         
       # Finally build your app with the latest command
       - name: Build and test with Maven
-        run: mvn clean verify --file ../../single-api/pom.xml
+        run: mvn clean verify --file ./simple-api/pom.xml
