--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,30 @@ jobs:
       # Finally build your app with the latest command
       - name: Build and test with Maven
         run: mvn clean verify --file ./simple-api/pom.xml
+
+# define job to build and publish docker image
+ build-and-push-docker-image:
+  needs: build-and-test-backend
+# run only when code is compiling and tests are passing
+  runs-on: ubuntu-latest
+# steps to perform in job
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Build image and push backend
+      uses: docker/build-push-action@v2
+      with:
+# relative path to the place where source code with Dockerfile is located
+        context: ./simple-api
+        # Note: tags has to be all lower-case
+        tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:simple-api
+    - name: Build image and push database
+      uses: docker/build-push-action@v2
+        with:
+          context: ./database
+          tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:database
+    - name: Build image and push httpd
+      uses: docker/build-push-action@v2
+          with:
+            context: ./httpd
+            tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:httpd
