--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,8 @@ jobs:
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Login to DockerHub
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{secrets.DOCKERHUB_PWD }}
     - name: Build image and push backend
       uses: docker/build-push-action@v2
       with:
@@ -48,13 +50,16 @@ jobs:
         context: ./simple-api
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:simple-api
+        push: ${{ github.ref == 'refs/heads/main }}
     - name: Build image and push database
       uses: docker/build-push-action@v2
       with:
           context: ./database
           tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:database
+          push: ${{ github.ref == 'refs/heads/main }}
     - name: Build image and push httpd
       uses: docker/build-push-action@v2
       with:
             context: ./httpd
             tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:httpd
+            push: ${{ github.ref == 'refs/heads/main }}
