--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,16 +50,16 @@ jobs:
         context: ./simple-api
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:simple-api
-        push: ${{ github.ref == 'refs/heads/main }}
+        push: ${{ github.ref == 'refs/heads/main' }}
     - name: Build image and push database
       uses: docker/build-push-action@v2
       with:
           context: ./database
           tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:database
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
     - name: Build image and push httpd
       uses: docker/build-push-action@v2
       with:
             context: ./httpd
             tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:httpd
-            push: ${{ github.ref == 'refs/heads/main }}
+            push: ${{ github.ref == 'refs/heads/main' }}
