--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Login to DockerHub
-      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{secrets.DOCKERHUB_PWD }}
+      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PWD }}
     - name: Build image and push backend
       uses: docker/build-push-action@v2
       with:
