--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -50,7 +49,7 @@ jobs:
         context: ./simple-api
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:simple-api
-        push: ${{ github.ref == 'refs/heads/main' }}
+        push: true
     - name: Build image and push database
       uses: docker/build-push-action@v2
       with:
