--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
         
       # Finally build your app with the latest command
       - name: Build and test with Maven
+        env : 
+            GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+            SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
         run: mvn -B verify sonar:sonar -Dsonar.projectKey=sonarclouddevops -Dsonar.organization=sonarclouddevops -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{secrets.SONAR_TOKEN }} --file ./simple-api/pom.xml
 
 # define job to build and publish docker image
