--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,15 @@ jobs:
         context: ./simple-api
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:simple-api
-        push: true
+        push: ${{ github.ref == 'refs/heads/main' }}
+    - name: Build image and push frontend
+      uses: docker/build-push-action@v2
+      with:
+# relative path to the place where source code with Dockerfile is located
+        context: ./devops-front-main
+        # Note: tags has to be all lower-case
+        tags: ${{secrets.DOCKER_USERNAME}}/correction-tp1-devops:devops-front-main
+        push: ${{ github.ref == 'refs/heads/main' }}
     - name: Build image and push database
       uses: docker/build-push-action@v2
       with:
