--- a/httpd/httpd.conf
+++ b/httpd/httpd.conf
@@ -236,6 +236,8 @@ ServerName localhost
     ProxyPreserveHost On
     ProxyPass / http://backend:8080/
     ProxyPassReverse / http://backend:8080/
+	ProxyPass / http://devops-front-main:80/
+    ProxyPassReverse / http://devops-front-main:80/
 </VirtualHost>
 
 #
